<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/display_title_cd_finder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_your_cd"
        android:textSize="20sp"
        android:gravity="center"

        />
    <TextView
        android:id="@+id/genre_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre_txt"
        android:textSize="20sp"
        android:layout_below="@id/display_title_cd_finder"
        />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radio_group_genre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/genre_txt">

        <RadioButton
            android:id="@+id/genre_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre_all"
            />

        <RadioButton android:id="@+id/radio_pirates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre_rock"
            android:onClick="onRadioButtonClicked"
            />
        <RadioButton android:id="@+id/radio_ninjas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre_classical"
            android:onClick="onRadioButtonClicked"
        />

        <RadioButton
            android:id="@+id/other_genre_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre_other"
            />
    </RadioGroup>
</RelativeLayout>