<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:orientation="vertical"
    >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Artist:"
        />

        <EditText
            android:id="@+id/text_input_artist"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text" />

    </LinearLayout>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="al"
        />

    <EditText
        android:id="@+id/text_input_cdname"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SWAP"
        android:layout_gravity="center"
        android:id="@+id/swap_artist_album"
        />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radio_group_genre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/swap_artist_album"
        android:checkedButton="@id/genre_unknown"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/style_label"
            />

        <RadioButton
            android:id="@+id/genre_unknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre_unknown"
            />

        <RadioButton android:id="@+id/radio_pirates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre_rock"
            />
        <RadioButton android:id="@+id/radio_ninjas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre_classical"
            />

        <RadioButton
            android:id="@+id/other_genre_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre_other"
            />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instrument_label"
        />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </ListView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_cd_button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            />

    </RelativeLayout>

</LinearLayout>