<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.nicolas.firstandroidproject.MainActivity2">

    <TextView
        android:id="@+id/add_cd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_cd"
        android:textSize="30sp"
        />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radio_group_genre"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/add_cd"
        android:checkedButton="@id/genre_unknown"
        >

        <RadioButton
            android:id="@+id/genre_unknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre_unknown"
            />

        <RadioButton android:id="@+id/radio_pirates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre_rock"
            />
        <RadioButton android:id="@+id/radio_ninjas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre_classical"
            />

        <RadioButton
            android:id="@+id/other_genre_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre_other"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/selected_image_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group_genre"
        android:text="Selected Image: "/>

    <ImageView
        android:id="@+id/selected_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/selected_image_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selected_image"
        android:layout_marginTop="10dp"
        android:text="Result:"
        />


    <Button
        android:id="@+id/select_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="Select Image"/>
</RelativeLayout>