<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <ImageView
        android:id="@+id/image_cd"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:textColor="#000000"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >
    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_table"
        >



    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist_name_label"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_weight="0"
            />

        <TextView
            android:id="@+id/artist_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album_name_label"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_weight="0"
            />

        <TextView
            android:id="@+id/album_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_marginRight="10dp" />

    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre_label"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_weight="0"/>

        <TextView
            android:id="@+id/genre_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_marginRight="10dp"/>

    </TableRow>


    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/style_label"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_weight="0"
            />

        <TextView
            android:id="@+id/style_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_marginRight="10dp" />

    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_label"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_weight="0"
            />

        <TextView
            android:id="@+id/country_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_marginRight="10dp" />

    </TableRow>
        <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/barcode_label"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_weight="0"/>

        <TextView
            android:id="@+id/barcode_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_marginRight="10dp"/>

    </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/format_label"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_weight="0"/>

            <TextView
                android:id="@+id/format_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_marginRight="10dp"/>

        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_labels_label"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_weight="0"/>

            <TextView
                android:id="@+id/image_labels_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_marginRight="10dp" />

        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_label"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_weight="0"/>

            <TextView
                android:id="@+id/have_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_marginRight="10dp"/>

        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/want_label"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_weight="0"/>

            <TextView
                android:id="@+id/want_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_marginRight="10dp" />

        </TableRow>
    </TableLayout>



        <Button
            android:id="@+id/delete_from_database_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/delete"
            />

    </LinearLayout>

</LinearLayout>